--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wanglijun.payhelper">
+    package="com.xq.payhelper">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 
     <application
-        android:name="com.wanglijun.payhelper.HelperApplication"
+        android:name="com.xq.payhelper.HelperApplication"
         android:allowBackup="true"
         android:icon="@mipmap/helper_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/helper_logo"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.wanglijun.payhelper.activity.SplashActivity"
+            android:name=".activity.SplashActivity"
             android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,11 +28,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.wanglijun.payhelper.activity.MainActivity" android:launchMode="singleTask"></activity>
-        <activity android:name="com.wanglijun.payhelper.activity.LoginActivity"></activity>
-        <activity android:name="com.wanglijun.payhelper.activity.HistoryActivity"></activity>
+        <activity android:name="com.xq.payhelper.activity.MainActivity" android:launchMode="singleTask"/>
+        <activity android:name="com.xq.payhelper.activity.LoginActivity"/>
+        <activity android:name="com.xq.payhelper.activity.HistoryActivity"/>
+
+        <activity
+            android:name="com.king.zxing.CaptureActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/CaptureTheme"/>
         <service
-            android:name="com.wanglijun.payhelper.service.HelperNotificationListenerService"
+            android:name="com.xq.payhelper.service.HelperNotificationListenerService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
