--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.blankj:utilcodex:1.30.6'
 }
