--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "V1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -60,7 +60,7 @@ dependencies {
 //    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     //配合Rxjava 使用
     implementation 'com.android.support:multidex:1.0.3'
-    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'
+//    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'
     implementation 'com.jaredrummler:android-processes:1.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.blankj:utilcodex:1.30.6'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0@aar'
 
     implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
